Initial full project push

--- a/templates/login.html
+++ b/templates/login.html
@@ -36,10 +36,7 @@
             Don’t have an account? <a href="{{ url_for('signup') }}">Sign Up</a>
         </p>
         
-        <button class="btn-primary" style="background-color: #64748B; width: 100%;"
-                onclick="window.location.href='{{ url_for('dashboard') }}';">
-            Continue as Guest (Demo)
-        </button>
+        <!-- 'Continue as Guest' button removed per request -->
 
         <!-- Link to standalone signup page -->
     </div>
